Pro 1.0.1
=========

- MODELER-384: Property form title is wrong for webview
  and color picker components
- MODELER-360: Command, Sensor, Switch names are
  not correctly encoded/decoded
- MODELER-385: Double scrollbar on widget selection

Designer 2.13.6 (2012-09-20 Rosemary)
=====================================

Bug fix release:

 
 - Increase maximum command field length from 1000
   characters to 4000 characters for UDP, TCP, HTTP
   and Telnet protocols
 - MODELER-379: attempting to delete an already deleted
   device shows up as an error to the user
 - MODELER-380: Log errors related to data integrity
   issues when loading switches for a device
 - Add panStamps lagarto server protocol configuration


Designer 2.13.5 (2012-09-11 Rosemary)
=====================================

Bug fix release:

 - MODELER-376: Log errors related to data integrity 
   issues with commands associated to sensors
 - MODELER-375: Transform macro references to DTOs 
   more defensively and guard against errors


Designer 2.13.4 (2012-07-29 Rosemary)
=====================================

Bug fix release:

 - MODELER-338: correctly reconstruct sensor data from
   database on load/restore


Designer 2.13.3 (2012-07-15 Rosemary)
=====================================

Bug fix release:

 - MODELER-325: resolve transaction issues on save
 - MODELER-326: device command update/delete handling fix
 - MODELER-327: not all commands were correctly included
   in generated controller.xml


Designer 2.13.2 (2012-06-24 Rosemary)
=====================================

Bug fix release:

 - Fixed MODELER-316: Enable gestures to be associated with 
   full macro definitions (XML schema change)
 - Fixed MODELER-317: Submit button was disabled after an
   error occured
 - Fixed MODELER-318: Account management yields an 
   HTTP 500 error
 - Fixed MODELER-321: Correctly delete custom sensor states
 - Fixed MODELER-311: same macro can be used multiple
   times in a command

